Empiezo a hacer base del TP

--- a/Tp1/sources/Makefile
+++ b/Tp1/sources/Makefile
@@ -4,7 +4,7 @@ CC = gcc -std=c++11
 CPPFLAGS = -Wall -Wextra -g -pedantic 
 CPPLDFLAGS = -lm -lstdc++
 
-EXEC = exec
+EXEC = concu_zappi
 
 OBJECTS = logger.o
 
@@ -13,7 +13,7 @@ all: $(EXEC)
 logger.o: logger.h logger.cpp
 	$(CC) $(CPPFLAGS) -c logger.cpp
 				
-$(EXEC): main.cpp $(OBJECTS)
+$(EXEC): $(EXEC).cpp $(OBJECTS)
 	$(CC) $(CPPLDFLAGS) $(OBJECTS) main.cpp -o $(EXEC)
 
 clean:
