Agrego borrar el log al clean porque me rompe mucho las bolas tener que borrarlo a mano

--- a/Tp1/sources/Makefile
+++ b/Tp1/sources/Makefile
@@ -44,4 +44,4 @@ $(EXEC): $(EXEC).cpp $(OBJECTS)
 	$(CC) $(CPPLDFLAGS) $(OBJECTS) $(EXEC).cpp -o $(EXEC)
 
 clean:
-	rm -f -r *.o *.save *~ $(EXEC)
+	rm -f -r *.o *.save *.log  *~ $(EXEC)
