--- a/Tp1/sources/Makefile
+++ b/Tp1/sources/Makefile
@@ -12,8 +12,8 @@ DEBUG = OFF
 
 EXEC = concu_zappi
 
-CONCURRENT_OBJECTS = lock_file.o pipe.o semaphore.o fifo.o reader_fifo.o writer_fifo.o
-OBJECTS = $(CONCURRENT_OBJECTS) logger.o call_center.o kitchen.o delivery.o
+CONCURRENT_OBJECTS = lock_file.o pipe.o semaphore.o fifo.o reader_fifo.o writer_fifo.o signal_handler.o
+OBJECTS = $(CONCURRENT_OBJECTS) logger.o call_center.o kitchen.o delivery.o cash_register.o
 
 all: $(EXEC) 
 
@@ -38,6 +38,9 @@ reader_fifo.o: reader_fifo.h reader_fifo.cpp
 writer_fifo.o: writer_fifo.h writer_fifo.cpp
 	$(CC) $(CPPFLAGS) -c writer_fifo.cpp
 
+signal_handler.o: signal_handler.h signal_handler.cpp
+	$(CC) $(CPPFLAGS) -c signal_handler.cpp
+
 call_center.o: call_center.h call_center.cpp
 	$(CC) $(CPPFLAGS) -c call_center.cpp
 
@@ -46,6 +49,9 @@ kitchen.o: kitchen.h kitchen.cpp
 
 delivery.o: delivery.h delivery.cpp
 	$(CC) $(CPPFLAGS) -c delivery.cpp
+
+cash_register.o: cash_register.h cash_register.cpp
+	$(CC) $(CPPFLAGS) -c cash_register.cpp
 
 $(EXEC): $(EXEC).cpp $(OBJECTS)
 	$(CC) $(CPPLDFLAGS) $(OBJECTS) $(EXEC).cpp -o $(EXEC)
