Cambios en oven_set para que tenga lo necesario para comunicarse con delivery, y para que se puedan abrir y cerrar las fifo/lo que sea. delivery supuestamente terminado. Arreglado define de shared_memory, que había quedado mal y se incluía n veces.

--- a/Tp1/sources/Makefile
+++ b/Tp1/sources/Makefile
@@ -13,7 +13,7 @@ DEBUG = OFF
 EXEC = concu_zappi
 
 CONCURRENT_OBJECTS = lock_file.o pipe.o semaphore.o fifo.o reader_fifo.o writer_fifo.o signal_handler.o
-OBJECTS = $(CONCURRENT_OBJECTS) logger.o call_center.o kitchen.o delivery.o cash_register.o
+OBJECTS = $(CONCURRENT_OBJECTS) logger.o call_center.o kitchen.o delivery.o cash_register.o oven_set.o
 
 all: $(EXEC) 
 
@@ -41,6 +41,12 @@ writer_fifo.o: writer_fifo.h writer_fifo.cpp
 signal_handler.o: signal_handler.h signal_handler.cpp
 	$(CC) $(CPPFLAGS) -c signal_handler.cpp
 
+cash_register.o: cash_register.h cash_register.cpp
+	$(CC) $(CPPFLAGS) -c cash_register.cpp
+
+oven_set.o: oven_set.h oven_set.cpp
+	$(CC) $(CPPFLAGS) -c oven_set.cpp
+
 call_center.o: call_center.h call_center.cpp
 	$(CC) $(CPPFLAGS) -c call_center.cpp
 
@@ -49,9 +55,6 @@ kitchen.o: kitchen.h kitchen.cpp
 
 delivery.o: delivery.h delivery.cpp
 	$(CC) $(CPPFLAGS) -c delivery.cpp
-
-cash_register.o: cash_register.h cash_register.cpp
-	$(CC) $(CPPFLAGS) -c cash_register.cpp
 
 $(EXEC): $(EXEC).cpp $(OBJECTS)
 	$(CC) $(CPPLDFLAGS) $(OBJECTS) $(EXEC).cpp -o $(EXEC)
