Borrado oven_set. Arreglados los includes y algunas giladas.

--- a/Tp1/sources/Makefile
+++ b/Tp1/sources/Makefile
@@ -12,7 +12,7 @@ DEBUG = ON
 EXEC = concu_zappi
 
 CONCURRENT_OBJECTS = lock_file.o pipe.o semaphore.o fifo.o reader_fifo.o writer_fifo.o signal_handler.o
-OBJECTS = $(CONCURRENT_OBJECTS) logger.o call_center.o kitchen.o delivery.o cash_register.o oven_set.o supervisor.o
+OBJECTS = $(CONCURRENT_OBJECTS) logger.o call_center.o kitchen.o delivery.o cash_register.o supervisor.o
 
 all: $(EXEC) 
 
@@ -45,9 +45,6 @@ cash_register.o: cash_register.h cash_register.cpp
 
 supervisor.o: supervisor.h supervisor.cpp
 	$(CC) $(CPPFLAGS) -c supervisor.cpp
-
-oven_set.o: oven_set.h oven_set.cpp
-	$(CC) $(CPPFLAGS) -c oven_set.cpp
 
 call_center.o: call_center.h call_center.cpp
 	$(CC) $(CPPFLAGS) -c call_center.cpp
