--- a/Tp2/sources/CMakeLists.txt
+++ b/Tp2/sources/CMakeLists.txt
@@ -6,4 +6,4 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 set(SOURCE_FILES
     Makefile)
 
-add_executable(sources ${SOURCE_FILES} message.h record.h)
+add_executable(sources ${SOURCE_FILES} message.h record.h Queue.h)
