--- a/Tp2/sources/Makefile
+++ b/Tp2/sources/Makefile
@@ -10,9 +10,9 @@ DEBUG = OFF
 #endif
 
 SERVER =
-CLIENT =
+CLIENT = client
 
-CONCURRENT_OBJECTS =
+CONCURRENT_OBJECTS = queue.h
 OBJECTS = $(CONCURRENT_OBJECTS)
 
 all: $(SERVER) $(CLIENT)
