--- a/Tp2/sources/CMakeLists.txt
+++ b/Tp2/sources/CMakeLists.txt
@@ -3,4 +3,4 @@ project (ConcusQl)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 
 include_directories(sources)
-add_executable(message queue record client server database.cpp database.h)
+add_executable(message queue client server database.cpp database.h database_record.cpp database_record constants)
