Main del cliente terminado y funcionando. No se guardan los datos enviados (ni en memoria ni en el archivo), el problema es del server.

--- a/Tp2/sources/Makefile
+++ b/Tp2/sources/Makefile
@@ -15,10 +15,10 @@ CLIENT = main_client
 SERVER_NAME = ConcusQlServer
 CLIENT_NAME = ConcusQlClient
 
-CONCURRENT_OBJECTS = queue.h message.o logger.o event_handler.h lock_file.o
+CONCURRENT_OBJECTS = queue.h message.o logger.o event_handler.h lock_file.o database_record.o
 
 CLIENT_OBJECTS = $(CONCURRENT_OBJECTS) client.o
-SERVER_OBJECTS = $(CONCURRENT_OBJECTS) database.o database_record.o signal_handler.o server.o
+SERVER_OBJECTS = $(CONCURRENT_OBJECTS) database.o signal_handler.o server.o
 
 all: $(SERVER) $(CLIENT)
 
